# cdc_pipeline

./: docker-compose.yml  insert_data.py  kafka-consumer.py  kafka-producer.py  pyproject.toml
